[package]
name = "wall-e"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
lipsum = "0.7"
rand = { version = "0.7", features = ["small_rng"] }

[dependencies.serenity]
version = "0.10"
features = ["framework", "standard_framework", "rustls_backend", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]